--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,9 +71,15 @@ dependencies {
     implementation("com.google.firebase:firebase-analytics")
     implementation("com.google.firebase:firebase-auth")
     implementation("com.google.firebase:firebase-firestore")
+    implementation 'com.google.firebase:firebase-firestore-ktx:25.0.0'
     implementation("com.google.android.gms:play-services-auth:21.2.0")
 
+    implementation "androidx.compose.ui:ui:1.6.7"
+    implementation "androidx.compose.material:material:1.6.7"
 
     implementation("androidx.navigation:navigation-compose:2.7.7")
     implementation "androidx.compose.ui:ui-text-google-fonts:1.6.8"
+
+
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.30.1"
 }
